action and joined section done

--- a/B12A01-landing-launchpad/Assets/style.css
+++ b/B12A01-landing-launchpad/Assets/style.css
@@ -39,3 +39,30 @@
 }
 
 
+/*-----action section style------*/
+.action-parent {
+    max-width: 1250px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
+
+
+/*--------join section style--------*/
+.join-section {
+    max-width: 1250px;
+    margin: auto;
+    background-color: rgb(229, 229, 245);
+    border-radius: 20px;
+    margin-top: 50px;
+}
+.join-child {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+.div {
+    padding: 50px;
+}
